== 0.8.0 Dodgy Dentist release
 * Add --require (-r) option to require a library, before executing your script.
 * Rename --rackup short option to -R, warn and load as rackup when file ends with .ru.
 * List supported adapters in command usage.
 * Add file adapter to built-in adapter, serve static files in current directory.
 * Allow disabling signal handling in Server with :signals => false
 * Make Server.new arguments more flexible, can now specify any of host, port, app or hash options.
 * Add --backend option to specified which backend to use, closes #55
 * Serve static file only on GET and HEAD requests in Rails adapter, fixes #58
 * Add threaded option to run server in threaded mode, calling the application in a
   thread allowing for concurrency in the Rack adapter, closes #46
 * Guess which adapter to use from directory (chdir option)
   or use specified one in 'adapter' option, re #47.

== 0.7.1 Fancy Pants release
 * Clean stale PID files when starting as daemon, fixes #53 [Chu Yeow]
 * Require EventMachine 0.11.0 for UNIX domain sockets. Until it's released, install from:
   gem install eventmachine --source http://code.macournoyer.com
 * Ruby 1.8.5 compatibility, closes #49 [Wincent Colaiuta]
 * Move all EventMachine stuff out of Server, you can now create a Thin Backend that
   does not depend on EventMachine.
 * Rename Connector to Backend. Extend Thin::Backends::Base to implement your own.
 * Fix high memory usage with big POST body, fixes #48

== 0.7.0 Spherical Cow release
 * Add --max-persistent-conns option to sets the maximum number of persistent connections.
   Set to 0 to disable Keep-Alive.
 * INT signal now force stop and QUIT signal gracefully stops.
 * Warn when descriptors table size can't be set as high as expected.
 * Eval Rackup config file using top level bindings.
 * Remove daemons gem dependency on Windows plateform, fixes #45.
 * Change default timeout from 60 to 30 seconds.